# qrreadwebcam

./: CMakeLists.txt  README.md  video.cpp
